flapivor/tests/m3/hopix/typechecker/good/28-anonymous-function.hopix
val succ : Int -> Int = (fun (x) => x + 1 : Int -> Int)

val main : Int = succ (0)