flapivor/tests/m3/hopix/typechecker/bad/19-invalid-function-call-05.hopix
def f : (String -> String) -> Int (x) = x

val main : String = f (((fun (x) => 0) : String -> Int))